# smart-bookmark-app

./: .gitignore  .pre-commit-config.yaml  README.md
backend/src/: .gitignore  Makefile  pyproject.toml
backend/src/handlers/: create_bookmark.py  get_bookmarks.py
backend/src/shared/: scraper.py
infrastructure/: app.py
infrastructure/stacks/: backend_stack.py  database_stack.py  frontend_stack.py
