[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-bookmark-app"
version = "0.1.0"
description = "My new Python project"
authors = [
    { name = "Monish Narwani", email = "monish.narwani@cloudwick.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "boto3>=1.34.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0"
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]