[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-bookmark-app"
version = "0.1.0"
description = "My new Python project"
authors = [
    { name = "Monish Narwani", email = "monish.narwani@cloudwick.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "beautifulsoup4>=4.14.3",
    "boto3>=1.34.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared", "handlers"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
